--- a/index.html
+++ b/index.html
@@ -2,28 +2,31 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>SASS SCSS | CSS Preprocessors</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="scss/style.css" />
 </head>
 
 <body>
     <section class="hero">
         <div class="container">
-            <h1>SASS SCSS | CSS Preprocessors</h1>
+            <h2>SASS SCSS | CSS Preprocessors</h2>
             <p>How it is done</p>
             <button>Know more</button>
         </div>
     </section>
+
     <section class="main">
         <div class="container">
             <h2>My first blog</h2>
             <p>Once upon a time</p>
-            <button>Know more</button>
+            <button>Read more</button>
         </div>
     </section>
+    <h2>not in section</h2>
+    <p>not</p>
 </body>
 
 </html>
