--- a/index.html
+++ b/index.html
@@ -11,11 +11,13 @@
 
 <body>
     <section class="hero">
-        <div class="container">
+
+        <div class="hero-text-block">
             <h2>SASS SCSS | CSS Preprocessors</h2>
             <p>How it is done</p>
             <button>Know more</button>
         </div>
+
     </section>
 
     <section class="main">
