--- a/index.html
+++ b/index.html
@@ -6,11 +6,26 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>SASS SCSS | CSS Preprocessors</title>
-    <link rel="stylesheet" href="scss/style.css" />
+    <link rel="stylesheet" href="css/style.css" />
 </head>
 
 <body>
-
+    <main>
+        <section class="conainer main-section">
+            <nav class="main-nav">
+                <a href="#" class="main-nav__nav-link">Home</a>
+                <a href="#" class="main-nav__nav-link">About</a>
+                <a href="#" class="main-nav__nav-link">Contact</a>
+            </nav>
+            <div class="content">
+                <img src="https://picsum.photos/id/237/800/500" alt="image" class="content__image">
+                <h2 class="content__title">Lorem, ipsum dolor.</h2>
+                <p class="content__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. A, error reiciendis
+                    animi accusamus accusantium eveniet illum incidunt dolor! Maiores, aperiam!</p>
+                <button class="content__btn"></button>
+            </div>
+        </section>
+    </main>
 </body>
 
 </html>
